Quotes are no longer full bleed on the mobile version.

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -73,26 +73,23 @@
 	}
 
 	.quotes-container {
-		padding-left: 0;
-		padding-right: 0;
+		padding-left: $spacing-1;
+		padding-right: $spacing-1;
 	}
 
 	.quote {
-		margin-bottom: $spacing-3;
-		padding: $spacing-2 $spacing-2 $spacing-1;
-		border-radius: 0px;
+		margin-bottom: $spacing-2;
+		padding: $spacing-2;
 	}
 
-	.quote-content * {
-		font-size: 19px;
+	.quote-content *,
+	.quote-content.big * {
+		font-size: 23px;
+		line-height: 1.35em;
 	}
 
 	.quote-content.small * {
-		font-size: 14px;
-	}
-
-	.quote-content.big * {
-		font-size: 27px;
+		font-size: 16px;
 	}
 }
 
